negative_tests/test4.octo
higher_function(a,b,c) -> int {
    lower_function(a,b,c) -> int { 
        return a + b + c ;
    }
    return 3;
}